cleaned up some warnings and code